fix scroll size on firefox

--- a/frontend_app_kanban/src/css/index.styl
+++ b/frontend_app_kanban/src/css/index.styl
@@ -41,6 +41,7 @@ cardWidth = 280px
           margin-bottom standardSpacing
           align-items baseline
           justify-content space-evenly
+          text-align start
           &__title
             width 180px
             text-overflow ellipsis
@@ -97,7 +98,8 @@ cardWidth = 280px
         border-radius standardBorderRadius
         margin 0 textSpacing
         overflow-y hidden
-        min-width 300px
+        min-width 315px
+        text-align center
         > :last-child
           overflow-x auto
           // INFO - GB - 2021-12-20 - The css rule below is !important because it overrides the library style
